Finalized changes on creation and geocode (geocode is in process for API research)

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,6 @@
 
-<button mat-raised-button (click)="addLocation()">Add</button>
+<!-- <button mat-raised-button (click)="addLocation()">Add</button> -->
+<button mat-raised-button (click)="openDialog()">Add new address</button>
 <div *ngIf="res">
   <table>
     <tr>
@@ -24,6 +25,4 @@
   
   </table>
 </div>
-
-<button mat-raised-button (click)="openDialog()">Install Angular</button>
 
